--- a/etf-trading-config/model.yaml
+++ b/etf-trading-config/model.yaml
@@ -1,14 +1,57 @@
-version: "v4.1"
-params:
-  atr_pct: 0.02
-  buffer_mult: 0.10
-  vol_z_min: 0.85
-  risk_per_trade_pct: 0.015
-stop_criteria:
-  min_sharpe: 0.30
-  profit_factor_min: 1.10
-  maxdd_limit_pct: 0.35
-  wf_calmar_var_max_pct: 30.0
-  wf_trim: 1
-data:
-  expected_columns: ["Date","Ticker","Open","High","Low","Close","Volume","Currency"]
+general:
+  data:
+    source: "web_yahoo"
+    adjusted: true
+    start: "2018-01-01"
+    tz_utc: true
+  risk:
+    default_risk_per_trade_pct: 1.5
+  walk_forward:
+    windows_yaml: "etf-trading-config/wf_windows.yaml"
+    trimmed_cov_ignore_extremes: 1
+    cov_threshold_pct: 30.0
+
+runs:
+  S0_buyhold:
+    universe: "etf-trading-config/universe.csv"
+    entry: {mode: "market_open_next"}
+    exit:
+      trailing_pct_by_ticker: {TNOW.MI: 12.0, XAIX.MI: 15.0, default: 12.0}
+    stop_loss: null
+    take_profit: null
+    guardrails: {sharpe_min: -999.0, profit_factor_min: 0.0, maxdd_abs_max_pct: 100.0, wf_calmar_cov_max_pct: 100.0}
+
+  S1_breakout:
+    universe: "etf-trading-config/universe.csv"
+    entry: {mode: "breakout_52w", buffer_pct: 0.3}
+    stop_loss: {mode: "percent", value_pct: 7.0}
+    take_profit: {mode: "percent", value_pct: 14.0}
+    exit: {break_even_after_tp1: false}
+    guardrails: {sharpe_min: 0.30, profit_factor_min: 1.10, maxdd_abs_max_pct: 35.0, wf_calmar_cov_max_pct: 30.0}
+
+  S2_multilayer:
+    universe: "etf-trading-config/universe.csv"
+    core:
+      scaling_tranches:
+        - {mode: "market_now", weight_pct: 33.0}
+        - {mode: "pullback_dma", dmas: [20,50], weight_pct: 33.0}
+        - {mode: "breakout_52w", buffer_pct: 0.3, weight_pct: 34.0}
+      trailing_pct_by_ticker: {TNOW.MI: 12.0, XAIX.MI: 15.0, default: 12.0}
+    tactical:
+      entry: {mode: "breakout_52w", buffer_pct: 0.3}
+      stop_loss: {mode: "percent", value_pct: 7.0}
+      take_profit: {mode: "percent", value_pct: 14.0}
+    guardrails: {sharpe_min: 0.30, profit_factor_min: 1.10, maxdd_abs_max_pct: 35.0, wf_calmar_cov_max_pct: 30.0}
+
+  S3_breakout_checklist:
+    universe: "etf-trading-config/universe.csv"
+    entry: {mode: "breakout_52w", buffer_pct: 0.3}
+    stop_loss: {mode: "percent", value_pct: 7.0}
+    take_profit: {mode: "percent", value_pct: 14.0}
+    filters:
+      nav_premium_abs_max_pct: 0.5
+      spread_median_max_pct: 0.25
+      seasonality_months_on: [11, 12, 1, 2, 3, 4]
+      regime: {market_above_ma200: "SWDA.MI", sector_above_ma200: "IXN"}
+      breadth: {proxy: "QQQ", rule: "close_above_ma", ma_period: 50}
+    guardrails: {sharpe_min: 0.30, profit_factor_min: 1.10, maxdd_abs_max_pct: 35.0, wf_calmar_cov_max_pct: 30.0}
