--- a/etf-trading-config/wf_windows.yaml
+++ b/etf-trading-config/wf_windows.yaml
@@ -1,5 +1,11 @@
 windows:
-  - { name: "WF-2022", test_start: "2022-01-01", test_end: "2022-12-31" }
-  - { name: "WF-2023", test_start: "2023-01-01", test_end: "2023-12-31" }
-  - { name: "WF-2024", test_start: "2024-01-01", test_end: "2024-12-31" }
-  - { name: "WF-2025YTD", test_start: "2025-01-01", test_end: "2025-12-31" }
+  - {start: "2018-01-01", end: "2018-12-31"}
+  - {start: "2019-01-01", end: "2019-12-31"}
+  - {start: "2020-01-01", end: "2020-12-31"}
+  - {start: "2021-01-01", end: "2021-12-31"}
+  - {start: "2022-01-01", end: "2022-12-31"}
+  - {start: "2023-01-01", end: "2023-12-31"}
+  - {start: "2024-01-01", end: "2024-12-31"}
+  - {start: "2025-01-01", end: "2025-12-31"}
+trim_extremes: 1
+cov_threshold_pct: 30.0
