--- a/etf-trading-config/signals.yaml
+++ b/etf-trading-config/signals.yaml
@@ -1,13 +1,5 @@
-equity_base: 100000
-risk_per_trade_pct: 0.01
-top_n: 15
-min_adv20: 1000000
-min_volume: 100000
-atr_period: 14
-atr_mult_sl: 2.0
-tp_r_multiples: [2.0,3.0]
-breakout_lookback: 55
-sma_fast: 50
-sma_slow: 200
-trend_filter: true
-rank_weights: {mom252: 0.6, mom63: 0.4}
+signals:
+  watchlist: {mode: "breakout_watchlist", window_days: 260, buffer_pct: 0.3}
+  entries_today: {mode: "breakout_candidates", buffer_pct: 0.3}
+  risk: {per_trade_risk_pct: 1.5, max_portfolio_heat_pct: 8.0}
+output: {dir: "outputs/signals"}
