--- a/.github/workflows/backtest_matrix.yml
+++ b/.github/workflows/backtest_matrix.yml
@@ -1,3 +1,4 @@
+
 name: Backtest (Matrix) via Web Ingest
 on:
   workflow_dispatch: {}
@@ -13,12 +14,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with: {python-version: "3.11"}
+        with:
+          python-version: "3.11"
       - name: Install deps
         run: python -m pip install -r etf-trading-engine/requirements.txt
       - name: Download EOD from Yahoo
         run: |
-          python etf-trading-engine/scripts/download_eod_yf.py             --universe etf-trading-config/universe.csv             --output etf-trading-engine/data/eod.csv             --start 2018-01-01 --adjusted --threads 4
+          python etf-trading-engine/scripts/download_eod_yf.py             --universe etf-trading-config/universe.csv             --output etf-trading-engine/data/eod.csv             --start 2018-01-01             --threads 4
       - name: Sanity check
         run: python etf-trading-engine/scripts/sanity_check.py --data etf-trading-engine/data/eod.csv
       - name: Run backtest ${{ matrix.run_id }}
