--- a/.github/workflows/backtest_matrix.yml
+++ b/.github/workflows/backtest_matrix.yml
@@ -15,29 +15,22 @@ jobs:
         run_id: [S0_buyhold, S1_breakout, S2_multilayer, S3_breakout_checklist]
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
       - name: Install deps
         run: python -m pip install -r etf-trading-engine/requirements.txt
-
       - name: Download EOD from Yahoo
         run: |
-          python etf-trading-engine/scripts/download_eod_yf.py             --universe etf-trading-config/universe.csv             --output etf-trading-engine/data/eod.csv             --start 2018-01-01             --threads 1             --sleep 1             --min_success 5
-
+          python etf-trading-engine/scripts/download_eod_yf.py             --universe etf-trading-config/universe.csv             --output etf-trading-engine/data/eod.csv             --start 2018-01-01             --threads 1             --sleep 1
       - name: Sanity check
         run: python etf-trading-engine/scripts/sanity_check.py --data etf-trading-engine/data/eod.csv
-
       - name: Run backtest ${{ matrix.run_id }}
         run: |
           python etf-trading-engine/scripts/run_ci_backtest.py             --config etf-trading-config/model.yaml             --data etf-trading-engine/data/eod.csv             --run_id ${{ matrix.run_id }}             --outdir outputs/${{ matrix.run_id }}
-
       - name: Walk-Forward report
         run: |
           python etf-trading-engine/scripts/walk_forward.py             --config etf-trading-config/model.yaml             --data etf-trading-engine/data/eod.csv             --windows etf-trading-config/wf_windows.yaml             --run_id ${{ matrix.run_id }}             --outdir outputs/${{ matrix.run_id }}
-
       - uses: actions/upload-artifact@v4
         with:
           name: kpis-${{ matrix.run_id }}
