--- a/etf-trading-config/model.yaml
+++ b/etf-trading-config/model.yaml
@@ -1,3 +1,6 @@
+params:
+  atr_pct: 1.0        # default richiesto dallo script (non cambia le nostre logiche)
+  
 general:
   data:
     source: "web_yahoo"
