--- a/etf-trading-config/wf_windows.yaml
+++ b/etf-trading-config/wf_windows.yaml
@@ -1,31 +1,32 @@
 windows:
   - name: "WF_2019"
-    start: "2019-01-01"
-    end:   "2019-12-31"
+    test_start: "2019-01-01"
+    test_end:   "2019-12-31"
 
   - name: "WF_2020"
-    start: "2020-01-01"
-    end:   "2020-12-31"
+    test_start: "2020-01-01"
+    test_end:   "2020-12-31"
 
   - name: "WF_2021"
-    start: "2021-01-01"
-    end:   "2021-12-31"
+    test_start: "2021-01-01"
+    test_end:   "2021-12-31"
 
   - name: "WF_2022"
-    start: "2022-01-01"
-    end:   "2022-12-31"
+    test_start: "2022-01-01"
+    test_end:   "2022-12-31"
 
   - name: "WF_2023"
-    start: "2023-01-01"
-    end:   "2023-12-31"
+    test_start: "2023-01-01"
+    test_end:   "2023-12-31"
 
   - name: "WF_2024"
-    start: "2024-01-01"
-    end:   "2024-12-31"
+    test_start: "2024-01-01"
+    test_end:   "2024-12-31"
 
   - name: "WF_2025"
-    start: "2025-01-01"
-    end:   "2025-12-31"
+    test_start: "2025-01-01"
+    test_end:   "2025-12-31"
 
 trim_extremes: 1
 cov_threshold_pct: 30.0
+
