--- a/.github/workflows/universe_fetch.yml
+++ b/.github/workflows/universe_fetch.yml
@@ -1,43 +1,25 @@
 name: Universe Snapshot
-
 on:
   workflow_dispatch:
   schedule:
-    - cron: "20 6 * * *"  # 06:20 CET approx
-
-permissions:
-  contents: read
-
+    - cron: "20 6 * * *"
 jobs:
   fetch-universe:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
-      - name: Install deps
-        run: |
+      - run: |
           python -m pip install --upgrade pip
           pip install requests
-
       - name: Fetch & validate universe
         run: |
           python etf-trading-engine/scripts/fetch_universe.py \
             --repo antoniosanso/etf-trading-suite \
             --path etf-trading-config/universe.csv \
             --outdir outputs/universe
-
-      - name: Print summary
-        run: |
-          echo "---- JSON summary ----"
-          cat outputs/universe/universe_snapshot.json || true
-          echo "----------------------"
-
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
