--- a/.github/workflows/universe_snapshot.yml
+++ b/.github/workflows/universe_snapshot.yml
@@ -1,25 +1,25 @@
-name: Snapshot Workflows
+name: Universe Snapshot
 
 on:
   schedule:
-    - cron: "0 2 * * *"
+    - cron: "15 2 * * *"
   workflow_dispatch:
 
 permissions:
   contents: read
 
 jobs:
-  snapshot:
+  universe:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: Create snapshot
+      - name: Universe snapshot
         run: |
-          python etf-trading-engine/scripts/snapshot_workflows.py --outdir ./snapshots
+          python etf-trading-engine/scripts/universe_snapshot.py --universe ./etf-trading-config/universe.csv --out ./snapshots/universe_$(date +%F).csv
       - uses: actions/upload-artifact@v4
         with:
-          name: snapshots
+          name: universe-snapshot
           path: snapshots/*
