--- a/.github/workflows/datalake_manifest.yml
+++ b/.github/workflows/datalake_manifest.yml
@@ -31,6 +31,11 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Install Python deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install pandas
+
       - name: Generate manifest (files.txt + manifest.csv)
         run: |
           python etf-trading-engine/scripts/generate_manifest.py             --eod-root ./etf-datalake/EOD             --out-dir  ./etf-datalake/latest
