--- a/.github/workflows/trading_suite_unified_daily.yml
+++ b/.github/workflows/trading_suite_unified_daily.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install runtime deps (pandas)
+      - name: Install runtime deps
         run: |
           python -m pip install --upgrade pip
           pip install pandas
@@ -31,13 +31,13 @@ jobs:
         run: |
           python etf-trading-engine/scripts/build_universe.py --min 220 --venues "Borsa Italiana,Euronext Paris,Euronext Amsterdam"
 
-      - name: Merge EOD
+      - name: Merge EOD (auto-detect layout & columns)
         run: |
-          python etf-trading-engine/scripts/merge_eod.py             --datalake ./etf-datalake             --output ./etf-trading-engine/data/eod.csv             --recursive             --datecol dt --closecol close --tickercol ticker             --opencol open --highcol high --lowcol low --volumecol volume
+          python etf-trading-engine/scripts/merge_eod_robust.py             --datalake ./etf-datalake             --output   ./etf-trading-engine/data/eod.csv
 
       - name: Run model
         run: |
-          python etf-trading-engine/scripts/run_ci_backtest.py             --config ./etf-trading-config/model.yaml             --data ./etf-trading-engine/data/eod.csv             --outdir ./outputs
+          python etf-trading-engine/scripts/run_ci_backtest.py             --config ./etf-trading-config/model.yaml             --data   ./etf-trading-engine/data/eod.csv             --outdir ./outputs
 
       - name: Upload results
         uses: actions/upload-artifact@v4
