--- a/.github/workflows/trading_suite_unified_daily.yml
+++ b/.github/workflows/trading_suite_unified_daily.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install runtime deps
         run: |
           python -m pip install --upgrade pip
-          pip install pandas
+          pip install pandas pyyaml numpy
 
       - name: Build/refresh universe (>=200 ETFs)
         run: |
@@ -44,6 +44,7 @@ jobs:
 
       - name: Run model
         run: |
+          mkdir -p outputs
           python etf-trading-engine/scripts/run_ci_backtest.py             --config ./etf-trading-config/model.yaml             --data   ./etf-trading-engine/data/eod.csv             --outdir ./outputs
 
       - name: Upload results
