--- a/.github/workflows/trading_suite_unified.yml
+++ b/.github/workflows/trading_suite_unified.yml
@@ -60,12 +60,13 @@ jobs:
             --eod latest/eod-latest.csv \
             --report outputs
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: unified-results
-          path: |
-            latest/index.json
-            latest/eod-latest.csv
-            latest/system_checks.txt
-            outputs/**/*
+      - name: Persist latest results to repo
+        run: |
+         mkdir -p latest
+         cp -r latest/*.csv latest/*.json latest/*.txt ./ || true
+         git config --global user.name "github-actions[bot]"
+         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+         git add latest/*.csv latest/*.json latest/*.txt || true
+         git commit -m "Update latest dataset and index [auto]" || echo "No changes to commit"
+         git push origin main || echo "Push skipped (already up to date)"
+
